--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,12 @@
 # Reload command
 unbind r
-bind r source-file ~/.config/tmux/.tmux.conf \; display-message "tmux config reloaded!"
-
-# Color scheme
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+bind r source-file ~/.tmux.conf \; display-message "tmux config reloaded!"
 
 # Vim movement binding
-#bind-key h select-pane -L
-#bind-key j select-pane -D
-#bind-key k select-pane -U
-#bind-key l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # Window management
 set-window-option -g mode-keys vi
@@ -21,37 +17,21 @@ set -g pane-base-index 1
 set -g renumber-windows on
 bind c new-window -c "#{pane_current_path}"
 
-# Changing the prefix
-set -g prefix C-s
-
 # Mouse settings
 set -g mouse on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'christoomey/vim-tmux-navigator'
-#set -g @plugin 'tmux-plugins/tmux-resurrect'
-#set -g @plugin 'tmux-plugins/tmux-continuum'
-#set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
-#set -g @plugin 'egel/tmux-gruvbox'
-#set -g @plugin 'catppuccin/tmux#v2.1.3' 
+set -g @plugin 'egel/tmux-gruvbox'
 
-# Catppuccin options
-#set -g @catppuccin_flavor 'mocha'#'mocha' # latte, frappe, macchiato or mocha
+# Gruvbox options
+set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
 
-#set -g @tmux-gruvbox 'dark256' # or 'dark256', 'light', 'light256'
-#set -g @tmux-gruvbox-right-status-x '%d.%m.%Y' # e.g.: 30.01.2024
-
-# Resurrect options
-#set -g @resurrect-capture-pane-contents 'on'
-#set -g @continuum-restore 'on'
-
-
-#set -g status-interval 3 
-#set -g status-right
-#set -g status-justify centre
-#set -g status-right-length 200
-#set -g status-left-length 200
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm' 
+run '~/.tmux/plugins/tpm/tpm'
