--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 # Reload command
 unbind r
-bind r source-file ~/.tmux.conf \; display-message "tmux config reloaded!"
+bind r source-file ~/.tmux.conf \; display-message "tmux config reloaded at ~/.tmux.conf!"
+
+# General
+set -g status-interval 5
 
 # Vim movement binding
 bind-key h select-pane -L
@@ -26,6 +29,9 @@ set -g @plugin 'egel/tmux-gruvbox'
 
 # Gruvbox options
 set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
+set -g @tmux-gruvbox-right-status-x '#(free -h | awk "/^Mem:/ {print \" MEM: \" \$3 \"/\" \$2}")'
+set -g @tmux-gruvbox-right-status-y '#(awk "{print \" CPU: \" \$1}" /proc/loadavg)'
+set -g @tmux-gruvbox-right-status-z '#(df -h / | awk "NR==2 {print \"󱛟 DISK: \" \$3 \"/\" \$2}")'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
