--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,10 @@ unbind r
 bind r source-file ~/.tmux.conf \; display-message "tmux config reloaded at ~/.tmux.conf!"
 
 # General
+set-option -g default-shell /usr/bin/fish
 set -g status-interval 5
+set -g default-terminal "screen-256color" # Set terminal type for 256-color support
+set -ga terminal-overrides ",*256col*:Tc" # Override to enable true-color for compatible terminals
 
 # Vim movement binding
 bind-key h select-pane -L
@@ -41,3 +44,5 @@ set -g @tmux-gruvbox-right-status-z '#(df -h / | awk "NR==2 {print \"󱛟 DISK: 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+
